--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,30 @@ button:active {
 .operator-btn:active {
   background-color: hsl(359, 100%, 85%);
 }
+@media screen and (max-width: 600px) {
+  #body {
+    height: auto;
+  }
+  h1 {
+    font-size: 25px;
+    line-height: 50px;
+  }
+  #calculator {
+    font-family: comic-sans-serif;
+    background-color: #efcfe3;
+    border-radius: 30px;
+    max-width: 500px;
+    overflow: hidden;
+  }
+  button {
+    width: 80px;
+    height: 80px;
+    border: none;
+    border-radius: px;
+    background-color: #e288;
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    cursor: pointer;
+  }
+}
